--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,28 @@
               android:layout_height="match_parent"
               android:orientation="vertical" >
 
+  <android.support.v4.view.ViewPager
+    android:id="@+id/vp_main"
+    android:layout_weight="1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+  </android.support.v4.view.ViewPager>
+
   <LinearLayout
+    android:id="@+id/intro_fragment_line"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:background="@color/colorGray"
+    android:layout_height="0.1dp">
+  </LinearLayout>
+
+  <LinearLayout
+    android:layout_weight="0.1"
     android:id="@+id/main_fragment_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_gravity="bottom"
     android:paddingTop="5dp"
-    android:background="@color/colorPuzi"
     android:layout_height="56dp">
 
     <FrameLayout
@@ -29,9 +44,9 @@
         android:background="#00000000"
         android:paddingBottom="7dp"/>
       <ImageView
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_gravity="center"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@color/colorWhite"
         android:id="@+id/iv_advertise_select"/>
       <Button
@@ -57,9 +72,9 @@
         android:background="#00000000"
         android:paddingBottom="7dp"/>
       <ImageView
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_gravity="center"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@color/colorWhite"
         android:id="@+id/iv_channel_select"/>
 
@@ -86,9 +101,9 @@
         android:background="#00000000"
         android:paddingBottom="7dp"/>
       <ImageView
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_gravity="center"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@color/colorWhite"
         android:id="@+id/iv_store_select"/>
 
@@ -115,9 +130,9 @@
         android:background="#00000000"
         android:paddingBottom="7dp"/>
       <ImageView
-        android:layout_gravity="bottom"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_gravity="center"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@color/colorWhite"
         android:id="@+id/iv_setting_select"/>
 
@@ -130,19 +145,5 @@
     </FrameLayout>
 
   </LinearLayout>
-
-  <LinearLayout
-    android:id="@+id/intro_fragment_line"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="@color/colorWhite"
-    android:layout_height="0.1dp">
-  </LinearLayout>
-
-  <android.support.v4.view.ViewPager
-    android:id="@+id/vp_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-  </android.support.v4.view.ViewPager>
 
 </LinearLayout>
