--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -38,7 +38,7 @@
         <ImageView
           android:layout_width="44dp"
           android:layout_height="44dp"
-          android:src="@drawable/level"
+          android:src="@drawable/logo"
           android:id="@+id/iv_rankImage"/>
 
       </FrameLayout>
@@ -68,20 +68,20 @@
       </FrameLayout>
 
       <ImageView
-        android:gravity="bottom"
-        android:background="@drawable/puzi_bi_text_08"
-        android:layout_width="22dp"
-        android:layout_height="30dp"
+        android:gravity="center_vertical"
+        android:background="@drawable/rectangle_2"
+        android:layout_width="13.3dp"
+        android:layout_height="13.3dp"
         android:id="@+id/tv_p"
         android:layout_alignBottom="@+id/fl_point"
         android:layout_toRightOf="@+id/fl_point"
         android:layout_toEndOf="@+id/fl_point"/>
 
       <ImageButton
-        android:gravity="center"
+        android:gravity="right|bottom"
         android:background="@drawable/add_friend"
-        android:layout_width="60dp"
-        android:layout_height="44dp"
+        android:layout_width="32dp"
+        android:layout_height="20dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
         android:id="@+id/ibtn_recommend"
