--- a/app/src/main/res/layout/fragment_search_id.xml
+++ b/app/src/main/res/layout/fragment_search_id.xml
@@ -29,81 +29,89 @@
   </FrameLayout>
 
   <LinearLayout
+    android:id="@+id/ll_searchid"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="50dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp">
+    android:layout_height="match_parent">
 
-    <TextView
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginBottom="20dp"
-      android:textSize="30sp"
-      android:textColor="@color/colorBlack"
-      android:text="회원 정보에 등록된\n이메일 주소를 입력하세요"
-      android:gravity="left" />
-
-    <EditText
-      android:background="@drawable/edittext"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginBottom="20dp"
-      android:textSize="15sp"
-      android:maxLines="1"
-      android:id="@+id/edit_search_email"
-      android:hint="이메일 주소를 입력하세요."
-      android:maxLength="30"
-      android:inputType="textEmailAddress"
-      android:paddingBottom="15dp"
-      android:paddingTop="15dp"
-      android:paddingLeft="15dp"/>
-
-    <Button
+    <LinearLayout
+      android:orientation="vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="20dp"
-      android:id="@+id/btn_srchid"
-      android:textSize="15sp"
-      android:text="아이디 찾기"
-      android:textColor="@color/colorWhite"
-      android:paddingBottom="20dp"
-      android:paddingTop="20dp"/>
+      android:layout_marginTop="50dp"
+      android:layout_marginLeft="50dp"
+      android:layout_marginRight="50dp">
 
-  </LinearLayout>
+      <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:textSize="30sp"
+        android:textColor="@color/colorBlack"
+        android:text="회원 정보에 등록된\n이메일 주소를 입력하세요"
+        android:gravity="left" />
 
-  <LinearLayout
-    android:background="@color/colorGray"
-    android:layout_width="match_parent"
-    android:layout_height="1dp">
+      <EditText
+        android:background="@drawable/edittext"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="20dp"
+        android:textSize="15sp"
+        android:maxLines="1"
+        android:id="@+id/edit_search_email"
+        android:hint="이메일 주소를 입력하세요."
+        android:maxLength="30"
+        android:inputType="textEmailAddress"
+        android:paddingBottom="15dp"
+        android:paddingTop="15dp"
+        android:paddingLeft="15dp"/>
 
-  </LinearLayout>
+      <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/btn_srchid"
+        android:textSize="15sp"
+        android:text="아이디 찾기"
+        android:textColor="@color/colorWhite"
+        android:paddingBottom="20dp"
+        android:paddingTop="20dp"/>
 
-  <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="50dp"
-    android:layout_marginRight="50dp"
-    android:layout_gravity="center_vertical">
+    </LinearLayout>
 
-    <TextView
-      android:layout_width="wrap_content"
+    <LinearLayout
+      android:background="@color/colorGray"
+      android:layout_width="match_parent"
+      android:layout_height="1dp">
+
+    </LinearLayout>
+
+    <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="match_parent"
       android:layout_height="30dp"
-      android:textColor="@color/colorGray"
-      android:textSize="13sp"
-      android:text="아직 푸지 회원이 아닌가요?"
-      android:layout_weight="1"/>
+      android:layout_marginTop="10dp"
+      android:layout_marginLeft="50dp"
+      android:layout_marginRight="50dp"
+      android:layout_gravity="center_vertical">
 
-    <Button
-      android:id="@+id/btn_srch_signup"
-      android:layout_width="wrap_content"
-      android:layout_height="30dp"
-      android:text="무료 회원가입"
-      android:textSize="13sp"
-      android:layout_weight="1"/>
+      <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:textColor="@color/colorGray"
+        android:textSize="13sp"
+        android:text="아직 푸지 회원이 아닌가요?"
+        android:layout_weight="1"/>
+
+      <Button
+        android:id="@+id/btn_srch_signup"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:text="무료 회원가입"
+        android:textSize="13sp"
+        android:layout_weight="1"/>
+
+    </LinearLayout>
 
   </LinearLayout>
 
