--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -6,64 +6,43 @@
               android:layout_height="match_parent">
 
   <LinearLayout
-    android:id="@+id/channel_fragment_container"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
-
-    <FrameLayout
-      android:id="@+id/fl_channelRecommend"
+    android:layout_height="37dp">
+    <ImageButton
+      android:layout_width="35dp"
+      android:layout_height="37dp"
+      android:src="@drawable/logo"
+      android:id="@+id/imageButton"
+      android:background="#00000000"
+      android:layout_marginLeft="14dp"/>
+    <Button
+      android:text="0"
+      android:textSize="32sp"
+      android:layout_marginLeft="4dp"
+      android:gravity="left"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content" android:id="@+id/button2" android:background="#00000000"/>
+    <ImageView
+      android:layout_gravity="center_vertical"
+      android:layout_marginLeft="11dp"
+      android:layout_width="13dp"
+      android:layout_height="13dp" android:src="@drawable/rectangle_2" android:id="@+id/imageView"/>
+    <TextView
+      android:layout_gravity="center_vertical"
+      android:textSize="16sp"
+      android:layout_marginLeft="6dp"
       android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:layout_weight="1"
-      android:orientation="vertical">
-
-      <TextView
-        android:text="추천"
-        android:textColor="@color/colorPuzi"
-        android:textSize="12sp"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/tv_channelRecommend"/>
-      <Button
-        android:id="@+id/btn_channelRecommend"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000"/>
-
-    </FrameLayout>
-
-    <LinearLayout
-      android:layout_gravity="center"
-      android:layout_width="2dp"
-      android:layout_height="24dp"
-      android:background="#d8d8d8">
-    </LinearLayout>
-
-    <FrameLayout
-      android:id="@+id/fl_channelFavorit"
-      android:layout_width="0dp"
-      android:layout_height="match_parent"
-      android:layout_weight="1"
-      android:orientation="vertical">
-
-      <TextView
-        android:text="관심사"
-        android:textSize="12sp"
-        android:gravity="center"
-        android:textColor="@color/colorPuzi"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/tv_channelFavorit"/>
-      <Button
-        android:id="@+id/btn_channelFavorit"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#00000000"/>
-
-    </FrameLayout>
-
+      android:layout_height="wrap_content"
+      android:inputType="textPersonName"
+      android:text="0"
+      android:ems="10"
+      android:id="@+id/editText" android:layout_weight="1"/>
+    <ImageButton
+      android:layout_gravity="center_vertical"
+      android:layout_margin="10dp"
+      android:layout_width="18dp"
+      android:layout_height="18dp" android:src="@drawable/filter" android:id="@+id/imageButton2"/>
   </LinearLayout>
   <LinearLayout
     android:id="@+id/channel_fragment_line"
