--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,105 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
               android:id="@+id/ll_main"
+              android:background="#FFFFFF"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical" >
+
+  <LinearLayout
+    android:layout_marginLeft="14dp"
+    android:layout_marginRight="14dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="45dp">
+
+    <FrameLayout
+      android:id="@+id/fl_revel"
+      android:layout_marginTop="2dp"
+      android:layout_gravity="center_vertical"
+      android:layout_width="35dp"
+      android:layout_height="37dp">
+      <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/btn_level"
+        android:background="@null"/>
+      <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/logo"
+        android:id="@+id/iv_rankImage"/>
+
+    </FrameLayout>
+
+    <LinearLayout
+      android:layout_gravity="center_vertical"
+      android:layout_weight="1"
+      android:id="@+id/rl_point"
+      android:paddingLeft="4dp"
+      android:paddingRight="4dp"
+      android:gravity="left"
+      android:layout_width="match_parent"
+      android:layout_height="45dp">
+
+      <FrameLayout
+        android:layout_gravity="center_vertical"
+        android:id="@+id/fl_point"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp">
+        <Button
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:id="@+id/btn_pointhistory"
+          android:background="@null"/>
+        <TextView
+          android:gravity="center"
+          android:layout_gravity="center"
+          android:textSize="32sp"
+          android:textStyle="bold"
+          android:text="0"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:id="@+id/tv_point"
+          android:layout_alignParentTop="true"/>
+      </FrameLayout>
+
+      <ImageView
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="center_vertical"
+        android:background="@drawable/rectangle_2"
+        android:layout_width="13.3dp"
+        android:layout_height="13.3dp"
+        android:id="@+id/iv_todaypoint"
+        android:layout_alignBottom="@+id/fl_point"
+        android:layout_toRightOf="@+id/fl_point"
+        android:layout_toEndOf="@+id/fl_point"/>
+
+      <TextView
+        android:layout_marginLeft="5dp"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/tv_todaypoint"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:text="0"
+        android:textColor="#999999"
+        android:layout_alignBottom="@+id/iv_todaypoint"
+        android:layout_toRightOf="@+id/iv_todaypoint"
+        android:layout_toEndOf="@+id/iv_todaypoint"/>
+
+    </LinearLayout>
+
+    <ImageButton
+      android:gravity="right"
+      android:background="@drawable/add_friend"
+      android:layout_width="32dp"
+      android:layout_height="20dp"
+      android:id="@+id/ibtn_recommend"/>
+
+  </LinearLayout>
 
   <android.support.v4.view.ViewPager
     android:id="@+id/vp_main"
@@ -16,8 +112,8 @@
     android:id="@+id/intro_fragment_line"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/colorGray"
-    android:layout_height="0.1dp">
+    android:background="#b2b2b2"
+    android:layout_height="0.5dp">
   </LinearLayout>
 
   <LinearLayout
@@ -26,8 +122,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_gravity="bottom"
-    android:paddingTop="5dp"
-    android:layout_height="56dp">
+    android:layout_height="50dp">
 
     <FrameLayout
       android:id="@+id/fl_advertise"
@@ -35,20 +130,13 @@
       android:layout_height="match_parent"
       android:layout_weight="1"
       android:orientation="vertical">
-
       <ImageView
         android:id="@+id/iv_advertise"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="49dp"
         android:layout_gravity="center"
         android:background="#00000000"
         android:paddingBottom="7dp"/>
-      <ImageView
-        android:layout_gravity="center"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@color/colorWhite"
-        android:id="@+id/iv_advertise_select"/>
       <Button
         android:id="@+id/btn_advertise"
         android:layout_width="match_parent"
@@ -66,17 +154,11 @@
 
       <ImageView
         android:id="@+id/iv_channel"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="49dp"
         android:layout_gravity="center"
         android:background="#00000000"
         android:paddingBottom="7dp"/>
-      <ImageView
-        android:layout_gravity="center"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@color/colorWhite"
-        android:id="@+id/iv_channel_select"/>
 
       <Button
         android:id="@+id/btn_channel"
@@ -95,17 +177,11 @@
 
       <ImageView
         android:id="@+id/iv_store"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="49dp"
         android:layout_gravity="center"
         android:background="#00000000"
         android:paddingBottom="7dp"/>
-      <ImageView
-        android:layout_gravity="center"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@color/colorWhite"
-        android:id="@+id/iv_store_select"/>
 
       <Button
         android:id="@+id/btn_store"
@@ -124,17 +200,11 @@
 
       <ImageView
         android:id="@+id/iv_setting"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
+        android:layout_width="48dp"
+        android:layout_height="49dp"
         android:layout_gravity="center"
         android:background="#00000000"
         android:paddingBottom="7dp"/>
-      <ImageView
-        android:layout_gravity="center"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:background="@color/colorWhite"
-        android:id="@+id/iv_setting_select"/>
 
       <Button
         android:id="@+id/btn_setting"
