--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -5,69 +5,29 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-  <LinearLayout
-    android:orientation="horizontal"
+  <HorizontalScrollView
     android:layout_width="match_parent"
-    android:layout_height="37dp">
-    <ImageButton
-      android:layout_width="35dp"
-      android:layout_height="37dp"
-      android:src="@drawable/logo"
-      android:id="@+id/imageButton"
-      android:background="#00000000"
-      android:layout_marginLeft="14dp"/>
-    <Button
-      android:text="0"
-      android:textSize="32sp"
-      android:layout_marginLeft="4dp"
-      android:gravity="left"
+    android:layout_height="32dp" android:id="@+id/view_filter">
+
+    <LinearLayout
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content" android:id="@+id/button2" android:background="#00000000"/>
-    <ImageView
-      android:layout_gravity="center_vertical"
-      android:layout_marginLeft="11dp"
-      android:layout_width="13dp"
-      android:layout_height="13dp" android:src="@drawable/rectangle_2" android:id="@+id/imageView"/>
-    <TextView
-      android:layout_gravity="center_vertical"
-      android:textSize="16sp"
-      android:layout_marginLeft="6dp"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:inputType="textPersonName"
-      android:text="0"
-      android:ems="10"
-      android:id="@+id/editText" android:layout_weight="1"/>
-    <ImageButton
-      android:layout_gravity="center_vertical"
-      android:layout_margin="10dp"
-      android:layout_width="18dp"
-      android:layout_height="18dp" android:src="@drawable/filter" android:id="@+id/imageButton2"/>
-  </LinearLayout>
-  <LinearLayout
-    android:id="@+id/channel_fragment_line"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:background="#dddddd"
-    android:layout_height="0.1dp">
-  </LinearLayout>
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+      <TextView
+        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:id="@+id/textView2"/>
+    </LinearLayout>
 
-  <LinearLayout
-    android:id="@+id/channel_fragment_container2"
+  </HorizontalScrollView>
+
+  <ListView
+    android:id="@+id/lv_channel"
+    android:layout_marginTop="8dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:divider="@color/colorWhite"
     android:background="@color/colorWhite"
-    android:orientation="vertical"
-    android:layout_weight="1"
-    android:layout_width="match_parent"
-    android:layout_height="0dp">
-
-    <ListView
-      android:id="@+id/lv_channel"
-      android:layout_marginTop="10dp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:divider="@color/colorWhite"
-      android:dividerHeight="10dp"/>
-
-  </LinearLayout>
+    android:dividerHeight="10dp"/>
 
 </LinearLayout>
