--- a/app/src/main/res/layout/activity_point.xml
+++ b/app/src/main/res/layout/activity_point.xml
@@ -3,16 +3,15 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#EEEEEE"
+              android:background="#FFFFFF"
               android:orientation="vertical"
               android:weightSum="1">
 
   <FrameLayout
     android:id="@+id/fl_setting"
     android:orientation="horizontal"
-    android:background="@color/colorPuzi"
     android:layout_width="match_parent"
-    android:layout_height="55dp">
+    android:layout_height="45dp">
 
     <ImageButton
       android:layout_gravity="left|center"
@@ -21,18 +20,10 @@
       android:background="@null"
       android:src="@drawable/back_chevron"
       android:id="@+id/ibtn_back"/>
-    <TextView
-      android:text="포인트 안내"
-      android:textColor="@color/colorWhite"
-      android:textSize="20sp"
-      android:gravity="center"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
   </FrameLayout>
 
   <LinearLayout
     android:id="@+id/ll_point_info"
-    android:layout_marginTop="5dp"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
@@ -77,19 +68,6 @@
           android:layout_alignParentTop="true"/>
       </FrameLayout>
 
-      <TextView
-        android:text="P"
-        android:textSize="38sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/colorYellow"
-        android:layout_width="wrap_content"
-        android:layout_height="42dp"
-        android:layout_alignParentTop="true"
-        android:id="@+id/tv_p"
-        android:layout_toRightOf="@+id/fl_point"
-        android:layout_marginRight="10dp"/>
-
     </RelativeLayout>
 
   </LinearLayout>
@@ -102,12 +80,16 @@
     android:orientation="horizontal"
     android:gravity="center">
 
-    <TextView
-      android:text="오늘 적립 내역"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="16sp"
-      android:textColor="#555555"/>
+    <ImageView
+      android:layout_marginLeft="10dp"
+      android:layout_gravity="center_vertical"
+      android:background="@drawable/rectangle_2"
+      android:layout_width="13.3dp"
+      android:layout_height="13.3dp"
+      android:id="@+id/iv_todaypoint"
+      android:layout_alignBottom="@+id/fl_point"
+      android:layout_toRightOf="@+id/fl_point"
+      android:layout_toEndOf="@+id/fl_point"/>
 
     <View
       android:layout_width="5dp"
@@ -122,7 +104,13 @@
 
   </LinearLayout>
 
-<!--
+  <LinearLayout
+    android:background="#3b3b3b"
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp">
+
+  </LinearLayout>
+
   <LinearLayout
     android:id="@+id/ll_point_tab"
     android:orientation="horizontal"
@@ -137,7 +125,7 @@
       android:orientation="vertical">
 
       <TextView
-        android:text="적립"
+        android:text="적립금"
         android:textSize="12sp"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -165,7 +153,7 @@
       android:orientation="vertical">
 
       <TextView
-        android:text="사용"
+        android:text="등급"
         android:textSize="12sp"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -184,8 +172,15 @@
         android:id="@+id/iv_chfavorit_select"/>
 
     </FrameLayout>
+
   </LinearLayout>
--->
+
+  <LinearLayout
+    android:background="#3b3b3b"
+    android:layout_width="match_parent"
+    android:layout_height="0.5dp">
+
+  </LinearLayout>
 
   <LinearLayout
     android:background="@color/colorWhite"
