--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="38dp">
         <Button
-          android:layout_width="wrap_content"
+          android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:id="@+id/btn_pointhistory"
           android:background="@null"/>
