--- a/app/src/main/res/layout/activity_store_coupon.xml
+++ b/app/src/main/res/layout/activity_store_coupon.xml
@@ -33,5 +33,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ListView
+      android:id="@+id/lv_coupon"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:divider="@color/colorWhite"
+      android:background="@color/colorWhite"
+      android:dividerHeight="10dp"/>
+
   </LinearLayout>
 </LinearLayout>
