--- a/app/src/main/res/layout/item_block_time.xml
+++ b/app/src/main/res/layout/item_block_time.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical"
+              android:background="#fcfcfc"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
@@ -10,32 +11,14 @@
     android:layout_width="match_parent"
     android:layout_height="40dp">
 
-    <com.joooonho.SelectableRoundedImageView
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      app:sriv_right_top_corner_radius="20dp"
-      app:sriv_right_bottom_corner_radius="20dp"
-      app:sriv_left_top_corner_radius="20dp"
-      app:sriv_left_bottom_corner_radius="20dp"
-      android:scaleType="centerCrop"
-      app:sriv_oval="false"
-      android:layout_width="40dp"
-      android:layout_height="40dp"
-      android:src="@drawable/active_icon"
-      android:background="#00000000"
-      android:id="@+id/ibtn_block_company_preview"/>
-
-
     <TextView
-      android:text=""
-      android:layout_marginLeft="10dp"
+      android:layout_marginLeft="16dp"
       android:layout_gravity="center_vertical"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:textSize="16sp"
-      android:fontFamily="sans-serif"
-      android:textStyle="normal"
+      android:textSize="28sp"
       android:textColor="#333333"
-      android:id="@+id/tv_block_company_name"
+      android:id="@+id/tv_block_time"
       android:layout_weight="1"/>
 
     <ImageButton
@@ -43,7 +26,7 @@
       android:layout_height="40dp"
       android:src="@drawable/delete_btn_copy_3"
       android:background="#00000000"
-      android:id="@+id/ibtn_block_company_remove"/>
+      android:id="@+id/ibtn_block_time_remove"/>
 
   </LinearLayout>
 
